# Calorify

./: BinarySearchTree.cpp  BinarySearchTree.hpp  CMakeLists.txt  Calorify.cpp  Calorify.hpp  ChatGPTClient.cpp  ChatGPTClient.hpp  FoodScanner.cpp  FoodScanner.hpp  HashMap.cpp  HashMap.hpp  MacroCalculator.cpp  MacroCalculator.hpp  README.md  Trie.cpp  Trie.hpp  User.cpp  User.hpp  main.cpp
